	Edited various process files across the system

General: added option (set to No by default) to email user for system-wide notifications
	New value in table gibbonSetting
	Edited files /preferences*.php, functions.php, login.php
	Edited file /lib/googleOAuth/index.php

Installer: added ability to install demo data
	New file /gibbon_demo.sql
	Edited file /installer/install.php
	

v8.3.00
-------
General: added footer link to credits on Gibbon website
	Edited file /index.php

General: improved Parental Dashboard to make it more useful for schools not using Planner and Markbook
	Edited files /index.php, function.php
	Edited file /modules/Timetable/moduleFunctions.php

Roll Groups: added ability to store and show a website for the group
	Edited files /modules/School Admin/rollGroup_manage*.php
	Edited files /modules/Roll Groups/rollGroups*.php
	Edited file /index.php

Messenger: set email to "Yes" by default, to avoid messages being send to no targets
	Edited file /modules/Messenger/messenger_post.php

Library: set to allow 0-day loan length as default (e.g. same day return)
	Edited files /modules/Library/library_lending_item_*.php
	Edited file /modules/School Admin/librarySettings.php

Timetable: improvements to timetable selector
	Edited files /modules/Timetable/moduleFunctions.php, tt_view.php
	Edited file /modules/Staff/staff_view_details.php

Staff: added filter to allow display of all staff, irrespective of status
	Edited files /modules/Staff/staff_view*.php

Messenger: fixed bug preventing message deletion for those with access to manage only their own messages
	Edited files /modules/Messenger/messenger_manage_delete*.php

System Admin: added cache reset on successful update to force top menu reload
	Edited file /modules/System Admin/updateProcess.php

General: changed "Add Record" to "Add", etc, throughout the system.
	Edited various files

i18n: added Bahasa Indonesian as non-active language for development
	Added value to table gibboni18n